lustre/include/obd.h
@@ -411,13 +411,11 @@ enum placement_policy {
 typedef enum placement_policy placement_policy_t;
 
 struct lmv_obd {
-	int			refcount;
 	struct lu_client_fld	lmv_fld;
 	spinlock_t		lmv_lock;
 	placement_policy_t	lmv_placement;
 	struct lmv_desc		desc;
 	struct obd_uuid		cluuid;
-	struct obd_export	*exp;
 	struct proc_dir_entry	*targets_proc_entry;
 
 	struct mutex		lmv_init_mutex;
